Acquire for web-cli
